<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieOverview">

    <TextView
        android:id="@+id/tvMovieNameMO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/movie_overview"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/rate" />

    <SeekBar
        android:id="@+id/skbRatingMO"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="5"
        android:progressTint="@color/black"
        android:padding="20dp"
        android:progress="3" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/comments" />

    <EditText
        android:id="@+id/etCommentMO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:padding="20dp" />

    <Button
        android:id="@+id/btnSubmitMO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/current_rating" />

    <TextView
        android:id="@+id/tvCurrentRatingMO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/comments" />

    <ListView
        android:id="@+id/lvCommentsMO"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp" />
</LinearLayout>