<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovie">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="195dp"
        tools:layout_editor_absoluteY="88dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_panel"
            android:textAlignment="center"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/etMovieNameAP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/movie_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etMovieYearAP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/movie_year"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/ivMoviePicAp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/btnAddAp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/add" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>